--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <p>Points per Second: <span id="pointsPerSecond">0</span></p>
     </div>
 
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
