--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js">
+      let tg = window.Telegram.WebApp()
+      tg.expand()
+    </script>
   </body>
 </html>
