add telegram styles

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="app.js">
-      let tg = window.Telegram.WebApp()
-      tg.expand()
+    <script>
+      let tg = window.Telegram.WebApp();
+      tg.expand();
     </script>
+    <script src="app.js"></script>
   </body>
 </html>
