--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
       <br />
       <p>Points per Second: <span id="pointsPerSecond">1</span></p>
+
+      <a class="main-link" href="sm.html">Share!</a>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
