--- a/sm.html
+++ b/sm.html
@@ -42,8 +42,8 @@
       let tg = window.Telegram.WebApp;
       tg.expand();
 
-      const link = encodeURI(window.location.href);
-      const msg = encodeURIComponent("Hey, I found this cool game");
+      const link = encodeURI("https://t.me/test_gaming_clicker_bot");
+      const msg = encodeURIComponent("Hey, I found this cool bot");
       const title = encodeURIComponent("Clicking game on Telegram");
 
       const fb = document.querySelector(".facebook");
